# stdash

./: Dockerfile  pyproject.toml
pages/: anotherpage1.py
src/stdash/: .app.py.swp  app.py
src/stdash/pages/: anotherpage1.py  anotherpage2.py  fileupload.py  hotdog.py  upload.py
